--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <harnessArgLine></harnessArgLine>
   </properties>
   <build>
     <pluginManagement>
@@ -43,6 +44,14 @@
             </manifest>
           </archive>
         </configuration>
+      </plugin>
+      <plugin>    
+      <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.22.2</version>
+    <configuration>
+        <argLine>${harnessArgLine}  @{argLine} </argLine>
+    </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
